# flaker

./: .gitignore  Cargo.toml  default.nix  flaker.nix  shell.nix
npins/: sources.json
src/: diffing.rs  errors.rs  indexing.rs  main.rs  reporting.rs
