[package]
name = "flaker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
enumset = "1.1.5"
tracing = { version = "0.1.41" }
tracing-error = "0.2.0"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
npins = { git = "https://github.com/andir/npins" }
reqwest = {  version = "0.12.12", features = [ "rustls-tls" ], default-features = false }
serde = { version = "1.0.218", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "process"] }
futures = { version = "0.3.31" }
walkdir = "2.5.0"
regex = "1.11.1"
octorust = "0.10.0"
tokio-stream = "0.1.17"
thiserror = "2.0.12"
anyhow = "1.0.97"
